# usage-guard

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  quotes.json
.github/workflows/: release.yml
apps/desktop/src/: main.js  preload.js  renderer.html
core/: alerts.js  config.js  notifications.js  providers.js
crates/usageguard-cli/: Cargo.toml
crates/usageguard-cli/src/: main.rs
crates/usageguard-core/: Cargo.toml
crates/usageguard-core/src/: lib.rs  secret_store.rs
crates/usageguard-desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/usageguard-desktop/capabilities/: default.json
crates/usageguard-desktop/src/: icon_art.rs  main.rs
crates/usageguard-desktop/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/usageguard-desktop/ui/src/: App.svelte  ProviderWidgetView.svelte  SettingsView.svelte  UsageRing.svelte  WidgetView.svelte  app.css  main.ts  providerTheme.ts  tauri.ts  usageRingTheme.ts
crates/usageguard-desktop/ui/src/usageDisplay/: index.ts  types.ts
crates/usageguard-desktop/ui/src/usageDisplay/adapters/: anthropicApi.ts  anthropicOauth.ts  anthropicOauthAlert.ts  genericApi.ts  openaiApi.ts  openaiOauth.ts  openaiOauthAlert.ts  shared.ts
docs/: ADAPTER_EXAMPLES.md  ALERTS.md  ARCHITECTURE.md  INTERFACES.md  NEXT_STEPS.md  PROJECT.md  PROVIDERS.md  SECURITY.md  SETUP.md  STACK.md
examples/providers/: custom-provider.json  usage-log.ndjson
tests/: alerts.test.js  test_alerts.py
usageguard/: cli.py  monitor.py
usageguard/providers/: anthropic.py  base.py  openai.py
