[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usageguard"
version = "0.1.0"
description = "Local-first AI usage monitor with alerts and LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "UsageGuard Contributors"}]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn>=0.30"
]

[project.scripts]
usageguard = "usageguard.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["usageguard*"]
