[package]
name = "usageguard-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
eframe = "0.33"
egui = "0.33"
chrono.workspace = true
usageguard-core = { path = "../usageguard-core" }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[[bin]]
name = "usageguard-desktop"
path = "src/main.rs"
