[package]
name = "usageguard-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono.workspace = true
usageguard-core = { path = "../usageguard-core" }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
reqwest.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
png = "0.17"
ico = "0.3"

[[bin]]
name = "usageguard-desktop"
path = "src/main.rs"
